2000-03-08    <rpr@rpr.wapit.com>

	* gw/smsbox_req.c: started re-working on UDHs, all new code
	commented out, yet

	* gw/bb_msg.c, gw/boxc.c: added assertions and some extra checking

	* gw/urltrans.c: fixed an error in 'default' rule finding code

	* gw/smsc_sema.h: commented out a function prototype not implemented

Tue Mar  7 16:40:49 CET 2000	Patrick Schaaf	<bof@bof.de>

	* gwlib/http.{c,h}: Added httprequest_replace_header() function,
	use it to overwrite (instead of duplicate) existing user defined
	headers. This gets rid of the duplicate User-Agent: header, which
	convinces some sites to send wml instead of html.

2000-03-07  Tuomas Luttinen  <tuo@tuo.wapit.fi>

	* gw/wml_compiler.c (text_shrink_blank): A little bug fix. The first 
	white space character in a row of them is now converted into a space, 
	the rest are deleted before compiling.

2000-03-07    <rpr@rpr.wapit.com>

	* gw/kannel.*conf: fixed hearbeat as heartbeat

	* gw/bearerbox.c, gw/boxc.c: fixed some memory leaks pointed out
	by Paul Keogh, and added many assertions.

Tue Mar  7 12:51:35 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/thread.c: Added missing #include for <string.h>.

Sun Mar  5 12:53:14 CET 2000	Patrick Schaaf	<bof@bof.de>

	* gw/wapbox.c, gw/wsp_http.c, gwlib/octstr.*: more or less
	completed URL mapping functionality; see gw/kannel.wapconf
	for a short description of the facilities. The device-home
	setting for Motorola Timeport should work correctly now.

Sun Mar  5 10:55:00 CET 2000	Patrick Schaaf	<bof@bof.de>

	* gw/wsp_http.c: change #if 1 to #if HAVE_LIBXML, to really not
	break compilation when libxml is missing.

2000-03-03 Sanna Seppanen <sanna@wapit.com>

	* gwlib/http.c: http_get_u: Should not crash anymore due trying
	to free memory twice

Fri Mar  3 15:50:33 2000  Lars Wirzenius  <liw@wapit.com>

	* README: Added note about CFLAGS settings for development.

Fri Mar  3 14:31:28 2000  Lars Wirzenius  <liw@wapit.com>
